# Narajangteo

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: daily-digest.yml
narajangteo/: __init__.py  config.py  emailer.py  g2b.py  main.py  state.py
tests/: test_emailer.py  test_g2b.py  test_main.py
